feat: introduce usernames to rest users
